--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,28 @@ form button:hover {
     background-color: #5a6268;
 }
 
+select {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background-color: #f8f9fa;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 1em;
+    color: #333;
+    cursor: pointer;
+    background-image: url('data:image/svg+xml;charset=US-ASCII,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="gray" class="bi bi-chevron-down" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/></svg>');
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 16px 16px;
+}
+
+select:focus {
+    outline: none;
+    border-color: #6c757d;
+}
+
 /* Footer Styles */
 
 footer a {
@@ -84,9 +106,6 @@ footer a {
 footer a:hover {
     text-decoration: underline;
 }
-
-
-
 
 /* my styles */
 header {
@@ -111,12 +130,18 @@ footer {
     font-family: "Ephesis", cursive;
     font-weight: 100;
     font-style: normal;
-    font-size: 3rem;
+    font-size: 4rem;
+    text-align: center;
 }
 
 .textstyle {
-    color: rgb(100, 181, 255);
+    color: black;
     font-family: "montserrat", cursive;
     font-weight: 400;
     font-style: normal;
+    text-align: center;
+}
+
+h1,h2,h3,h4,h5,h6,a,p {
+    margin: 0rem;
 }
