--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,7 @@ footer a:hover {
     font-family: "Ephesis", cursive;
     font-weight: 100;
     font-style: normal;
+    text-align: center;
 }
 
 .textstyle {
@@ -97,6 +98,7 @@ footer a:hover {
     font-family: "montserrat", cursive;
     font-weight: 400;
     font-style: normal;
+    text-align: center;
 }
 
 /* Header */
@@ -125,10 +127,6 @@ footer {
 
 
 /* Title */
-#titlesection {
-    text-align: center;
-}
-
 #titlesection .titlestyle{
     font-size: 4rem;
 }
@@ -140,16 +138,15 @@ footer {
 
 /* Section */
 section {
-    padding: 0.5rem;
-    margin: 20px auto;
-    max-width: 800px;
+    margin: 1rem;
     background: white;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 1rem;
+    box-sizing: border-box;
 }
 
 section .titlestyle {
-    border-bottom: 2px solid #6c757d;
     font-size: 2rem;
 }
 
@@ -158,6 +155,22 @@ select:focus {
     border-color: #6c757d;
 }
 
+.section-images {
+    display: flex;
+    justify-content: space-between;
+    gap: 0.5rem;
+}
+
+.section-images img {
+    width: calc((100% - 1rem) / 3);
+    height: 300px;
+    border-radius: 2rem;
+    padding: 0.5rem;
+    box-sizing: border-box;
+    object-fit: cover;
+}
+
+/* General */
 h1,h2,h3,h4,h5,h6,a,p {
     margin: 0rem;
 }
