--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,23 @@
+/* General */
+h1,h2,h3,h4,h5,h6,a,p {
+    margin: 0;
+}
+
+.titlestyle {
+    color: #004AAD;
+    font-family: "Ephesis", cursive;
+    font-weight: 100;
+    font-style: normal;
+    text-align: center;
+}
+.textstyle {
+    color: black;
+    font-family: "montserrat", cursive;
+    font-weight: 400;
+    font-style: normal;
+    text-align: center;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -5,22 +25,6 @@ body {
     line-height: 1.6;
     color: #333;
     background-color: #f8f9fa;
-}
-
-nav ul li {
-    display: inline;
-    margin: 0 10px;
-}
-
-nav ul li a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-    font-family: "montserrat";
-}
-
-nav ul li a:hover {
-    text-decoration: underline;
 }
 
 form {
@@ -52,21 +56,12 @@ form button:hover {
     background-color: #5a6268;
 }
 
-select {
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    background-color: #f8f9fa;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    font-size: 1em;
-    color: #333;
-    cursor: pointer;
-    background-image: url('data:image/svg+xml;charset=US-ASCII,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="gray" class="bi bi-chevron-down" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/></svg>');
-    background-repeat: no-repeat;
-    background-position: right 10px center;
-    background-size: 16px 16px;
+#language-select {
+   
+}
+
+.language-select-img {
+
 }
 
 footer a {
@@ -78,6 +73,8 @@ footer a {
 footer a:hover {
     text-decoration: underline;
 }
+
+/* Header */
 
 header {
     background: #004AAD;
@@ -102,29 +99,60 @@ footer {
     width: 100%;
 }
 
+nav ul li {
+    display: inline;
+    margin: 0 10px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    font-family: "montserrat";
+    font-size: 2vw;
+}
+
+nav ul li a:hover {
+    text-decoration: underline;
+}
+
+/* Title Section */
+
 #titlesection .titlestyle{
-    font-size: 6rem;
+    font-size: clamp(0.5rem, 15vw, 8rem);
+    margin-left: 1vw;
+    margin-right: 1vw;
+    line-height: 1;
 }
 
 #titlesection .textstyle{
-    font-size: 2rem;
+    font-size: 4vw;
 }
 
+/* Section */
+
 section {
-    margin: 1rem;
     background: white;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 1rem;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    padding-top: 0%;
+    padding-bottom: 1%;
+    margin-left: 1vw;
+    margin-right: 1vw;
+    margin-top: 2%;
+    margin-bottom: 2%;
     box-sizing: border-box;
 }
 
 section .titlestyle {
-    font-size: 3rem;
+    font-size: 5vw;
 }
 
 section .textstyle {
-    font-size: 1.2rem;
+    font-size: 2vw;
+    margin-bottom: 5px;
 }
 
 select:focus {
@@ -134,35 +162,14 @@ select:focus {
 
 .section-images {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 .section-images img {
-    height: 18vw;
+    height: 19vw;
     width: auto;
-    border-radius: 2rem;
+    border-radius: 2vw;
     box-sizing: border-box;
     object-fit: contain;
-    margin: 10px;
-}
-
-h1,h2,h3,h4,h5,h6,a,p {
-    margin: 0rem;
-}
-
-.titlestyle {
-    color: #004AAD;
-    font-family: "Ephesis", cursive;
-    font-weight: 100;
-    font-style: normal;
-    text-align: center;
-}
-
-.textstyle {
-    color: black;
-    font-family: "montserrat", cursive;
-    font-weight: 400;
-    font-style: normal;
-    text-align: center;
 }
