--- a/styles.css
+++ b/styles.css
@@ -117,16 +117,23 @@ nav ul li a:hover {
 }
 
 /* Title Section */
-
-#titlesection .titlestyle{
-    font-size: clamp(0.5rem, 15vw, 8rem);
-    margin-left: 1vw;
-    margin-right: 1vw;
-    line-height: 1;
+#titlesection {
+    text-align: center;
+    margin-left: 2vw;
+    margin-right: 2vw;
 }
 
+#titlesection .titlestyle{
+    line-height: 1;
+    font-size: clamp(100px, 5vw, 200px);
+    line-height: 1.2;
+    white-space: normal;
+    overflow-wrap: normal;
+}
+
+
 #titlesection .textstyle{
-    font-size: 4vw;
+    font-size: clamp(10px, 8.5vw, 150px);
 }
 
 /* Section */
