--- a/styles.css
+++ b/styles.css
@@ -118,24 +118,45 @@ nav ul li a:hover {
 
 /* Title Section */
 #titlesection {
-    text-align: center;
     margin-left: 2vw;
     margin-right: 2vw;
+    
 }
 
-#titlesection .titlestyle{
-    line-height: 1;
-    font-size: clamp(100px, 5vw, 200px);
+#titlesection .titlestyle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     line-height: 1.2;
-    white-space: normal;
-    overflow-wrap: normal;
+    text-align: center;
+    height: 1.2em;
+    white-space: nowrap;
+    font-size: 8vw;
 }
 
+/*
+@media (max-width: 520px) {
+    #titlesection .titlestyle {
+        white-space: normal;
+        height: 2.4em;
+    }
+}
+*/
+
+/*
+@media (max-width: 520px) {
+    #titlesection .titlestyle {
+        font-size: 8.5vw;
+        white-space: nowrap;
+        overflow: hidden;
+    }
+}
+*/
 
 #titlesection .textstyle{
-    font-size: clamp(10px, 8.5vw, 150px);
+    font-size: 4vw;
 }
-
+*/
 /* Section */
 
 section {
