--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ footer a:hover {
 header {
     background: #004AAD;
     color: white;
-    padding: 0.1rem;
+    padding: 1vw;
     text-align: center;
 }
 
