--- a/styles.css
+++ b/styles.css
@@ -22,13 +22,25 @@ html, body {
     font-weight: 100;
     font-style: normal;
     text-align: center;
+    font-size: 5vw;
 }
+
+.subtitlestyle {
+    color: black;
+    font-family: "montserrat";
+    font-weight: 700;
+    font-style: normal;
+    text-align: center;
+    font-size: 2vw;
+}
+
 .textstyle {
     color: black;
     font-family: "montserrat";
-    font-weight: 400;
+    font-weight: 300;
     font-style: normal;
     text-align: center;
+    font-size: 1.5vw;
 }
 
 body {
@@ -149,16 +161,6 @@ section {
     box-sizing: border-box;
 }
 
-section .titlestyle {
-    font-size: 5vw;
-}
-
-section .textstyle {
-    font-size: 2vw;
-    margin-bottom: 5px;
-}
-
-
 
 /* Section 1 */
 
@@ -214,15 +216,12 @@ iframe {
     .content-section {
         display: default;
     }
-
     #img1 {
         height: 35vw;
     }
-
     #img2, #img3 {
         height: 34vw;
     }
-
     iframe {
         border-radius: 2vw;
         box-sizing: border-box;
@@ -236,12 +235,10 @@ iframe {
 
 
 /* Section 2: Timeline */
-
 .timeline {
     position: relative;
-    margin: 0 auto;
+    margin: 10px auto;
 }
-
 .timeline::after {
     content: '';
     position: absolute;
@@ -253,67 +250,49 @@ iframe {
     right: 50%;
 }
 
-.left_container {
-    padding: 1vw;
+/* Container */
+.left_container, .right_container {
     position: relative;
-    display: inline-block;
-    font-family: "montserrat";
-    font-size: 3vw;
+    padding: 1vw;
     background-color: white;
     border-radius: 2vw;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 0;
+    margin-bottom: 0;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    display: inline-block;
+    font-size: 2vw;
+    z-index: 1;
+    text-align: center;
+    white-space: pre-wrap;
+}
+.left_container {
     margin-left: 47%;
     transform: translateX(-100%);
-    z-index: 1;
-    text-align: center;
-    white-space: pre-wrap;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
-
 .right_container {
-    padding: 1vw;
-    position: relative;
-    display: inline-block;
-    font-family: "montserrat";
-    font-size: 3vw;
-    background-color: white;
-    border-radius: 2vw;
-    margin-top: 10px;
-    margin-bottom: 10px;
     margin-left: 54%;
-    z-index: 1;
-    text-align: center;
-    white-space: pre-wrap;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 /* Arrow */
+.left_container::before, .right_container::before{
+    content: '';
+    position: absolute;
+    top: 50%;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+}
 .left_container::before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    right: 0;
     transform: translate(100%, -50%);
-    border-left: 1vw solid white;
-    border-top: 12px solid transparent;
-    border-bottom: 12px solid transparent;
+    right: 3px;
+    border-left: 1.5vw solid white;
 }
-
-/* Arrow */
 .right_container::before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translate(-100%, -50%);
-    border-right: 1vw solid white;
-    border-top: 12px solid transparent;
-    border-bottom: 12px solid transparent;
+    transform: translate(-100%, -50%); 
+    left: 3px;
+    border-right: 1.5vw solid white;
 }
 
-/* Circle*/
-
+/* Circle */
 .left_container::after {
     content: '';
     position: absolute;
@@ -328,7 +307,6 @@ iframe {
     z-index: 1;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
 }
-
 .right_container::after {
     content: '';
     position: absolute;
